--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ osx_image: xcode10
 script:
 - swift package update
 - swift package generate-xcodeproj
-- xcodebuild test -workspace Coconut.xcworkspace -scheme Coconut -destination "platform=iOS Simulator,name=iPhone X" ONLY_ACTIVE_ARCH=NO
+- xcodebuild test -workspace Coconut.xcworkspace -scheme Coconut-Package -destination "platform=iOS Simulator,name=iPhone X" ONLY_ACTIVE_ARCH=NO
